Add ghost flower underneath cursor.

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,15 @@
   height: 100%;
 }
 
+.cursorTracker {
+  opacity: 0.5;
+  position: fixed;
+  z-index: 999;
+  pointer-events: none;
+  width: 48px;
+  height: 48px;
+}
+
 .canvas {
   display: grid;
   overflow: auto;
