--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,9 @@
   position: fixed;
   z-index: 999;
   pointer-events: none;
-  width: 48px;
-  height: 48px;
+  width: 32px;
+  height: 32px;
+  transition: top, left 0.1s;
 }
 
 .canvas {
