--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -107,6 +107,7 @@ p {
 .bgButton {
   width: 40px;
   height: 40px;
+  background-size: 40px;
   border-radius: 50%;
   margin: 2px;
   border: 2px solid var(--bg-color);
